Deleting Collection crashes Blender when hair system renders with collection & 'Use Count' #64414

Closed
opened 2019-05-10 00:42:18 +02:00 by Joseph Brandenburg · 4 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: 3dc9da3a74
Worked: N/A (new feature for 2.80)

Short description of error
If you have an object with a hair particle system set to render from a collection with 'Use Count" and then delete the collection, Blender crashes if you select the object and try to open the particle settings>render>collection menu. It only seems to crash when you try to open that specific window. This is a particularly naughty bug because you can work normally for a while with no error, and then try to open the render settings of your object and BAM! crash with seemingly no explanation.

I couldn't get Blender to crash from deleting the collection unless 'use count' was checked.
I'd be happy to test this on Ubuntu if you need me to.

Exact steps for others to reproduce the error
From attached .blend file: bug_deletingInstancedCollection.blend
Simply delete the Suzanne collection, select the cube, and attempt to open the particle settings>render>collection tab.

On an unrelated note, I've noticed that the 'use count menu' doesn't seem to update correctly when adding new items to the collection being used. I need to test this a little more before doing a complete bug report, but maybe its related to the issue I've already described.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-05-07 19:17, hash: `3dc9da3a74` Worked: N/A (new feature for 2.80) **Short description of error** If you have an object with a hair particle system set to render from a collection with 'Use Count" and then delete the collection, Blender crashes if you select the object and try to open the particle settings>render>collection menu. It only seems to crash when you try to open that specific window. This is a particularly naughty bug because you can work normally for a while with no error, and then try to open the render settings of your object and BAM! crash with seemingly no explanation. I couldn't get Blender to crash from deleting the collection unless 'use count' was checked. I'd be happy to test this on Ubuntu if you need me to. **Exact steps for others to reproduce the error** From attached .blend file: [bug_deletingInstancedCollection.blend](https://archive.blender.org/developer/F7022406/bug_deletingInstancedCollection.blend) Simply delete the Suzanne collection, select the cube, and attempt to open the particle settings>render>collection tab. On an unrelated note, I've noticed that the 'use count menu' doesn't seem to update correctly when adding new items to the collection being used. I need to test this a little more before doing a complete bug report, but maybe its related to the issue I've already described.

Added subscriber: @Josephbburg

Added subscriber: @Josephbburg

This issue was referenced by 06099f391e

This issue was referenced by 06099f391e18365da2c81fce52faa903ef44908f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @AditiaA.Pratama

Added subscriber: @AditiaA.Pratama
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64414
No description provided.