Fix T64414: crash deleting collection used for particle group and use count